--- a/095.html
+++ b/095.html
@@ -16,11 +16,12 @@
 			box-shadow: 10px 10px 10px rgba(0,0,0,.5);
 			color: #fff;
 			background: rgba(187,52,241,.8);
+			text-align: center;
 		}
 		ul{
 			display: flex;
 			flex-wrap: wrap;
-			text-align: center;			
+			justify-content: center;
 		} 		
 	</style>
 </head>
