--- a/095.html
+++ b/095.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>poems</title>
-	<script src="poems.js"></script>
+	<script src="/data/poems.js"></script>
 	<style>
 		li{
 			width:40%;
