--- a/083.html
+++ b/083.html
@@ -27,14 +27,14 @@
 	</style>
 </head>
 <body>
-	<script>
+	<h1>Multiplication Table</h1><script>
 		for (let i = 1; i <= 9; i++) {
 			document.write('<p>');
 			for (let j = 1; j <= 9; j++) {
 				if (j>=i) {
-					document.write(`<span class="blue">${i}*${j}=${i*j}</span>`);
+					document.write(`<span class="blue">${i} ❌ ${j}=${i*j}</span>`);
 				} else {
-					document.write(`<span>${i}*${j}=${i*j}</span>`);
+					document.write(`<span>${i} ❌ ${j}=${i*j}</span>`);
 				}
 			}
 			document.write('</p>');	
