--- a/083.html
+++ b/083.html
@@ -32,9 +32,9 @@
 			document.write('<p>');
 			for (let j = 1; j <= 9; j++) {
 				if (j>=i) {
-					document.write(`<span class="blue">${i} ❌ ${j}=${i*j}</span>`);
+					document.write(`<span class="blue">${i}x${j}=${i*j}</span>`);
 				} else {
-					document.write(`<span>${i} ❌ ${j}=${i*j}</span>`);
+					document.write(`<span>${i}x${j}=${i*j}</span>`);
 				}
 			}
 			document.write('</p>');	
