--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Anna</title>
+</head>
+<body>
+	<h1>Hello world</h1>
+	<p>I'm Anna</p>
+</body>
+</html>
