--- a/056.html
+++ b/056.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Letter cards</title>
+	<title>Word cards</title>
 	<style>
 		body{
 			background: url(images/back.jpg) 0 0 no-repeat;
