--- a/070.html
+++ b/070.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>免做作业卡</title>
 	<style>
 		body{
 			text-align: center;
