--- a/073.html
+++ b/073.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="liuxiyuan">
+    <meta name="viewport" content="width=device-width">
     <title>Word cards</title>
     <style>
     ul,li {
@@ -18,7 +20,7 @@
 
     .mycards {
         margin: auto;
-        width: 1600px;
+        width: 98%;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
@@ -89,6 +91,7 @@
 </head>
 
 <body>
+    <h1>Word Cards</h1>
     <ul class="mycards"></ul>
     <script>
     const words = ['ant', 'balloon', 'caterpillar', 'dog', 'drum', 'duck', 'cat', 'eagle', 'elephant', 'gorilla'];
