--- a/073.html
+++ b/073.html
@@ -11,26 +11,22 @@
         padding: 0;
         list-style: none;
     }
-
     body {
         text-align: center;
         background: #f4f4f4;
         font-family: 'microsoft yahei';
     }
-
     .mycards {
         margin: auto;
         width: 98%;
         display: flex;
         flex-flow: row wrap;
-        justify-content: space-between;
+        justify-content: center;
     }
-
     .card {
         width: 300px;
-        margin-bottom: 20px;
+        margin: 20px;
     }
-
     .front {
         border-radius: 10px;
         height: 400px;
@@ -39,13 +35,11 @@
         box-shadow: 8px 8px 8px rgba(0, 0, 0, .4);
         display: none;
     }
-
     .front img {
         width: 100%;
         height: 100%;
         object-fit: contain;
     }
-
     .back {
         border-radius: 10px;
         height: 400px;
@@ -54,42 +48,34 @@
         font-size: 48px;
         line-height: 400px;
     }
-
     .open .front {
         display: block;
     }
-
     .open .back {
         display: none;
     }
-
     .card:nth-of-type(5n-4) .back {
         background: linear-gradient(30deg, rgb(237, 48, 60), rgba(237, 48, 60, .6));
         color: rgb(248, 172, 177);
     }
-
     .card:nth-of-type(5n-3) .back {
         background: linear-gradient(30deg, rgb(253, 185, 19), rgba(253, 185, 19, .6));
         color: rgb(238, 48, 60);
     }
-
     .card:nth-of-type(5n-2) .back {
         background: linear-gradient(30deg, rgb(37, 50, 137), rgba(37, 50, 137, .6));
         color: rgb(168, 173, 208);
     }
-
     .card:nth-of-type(5n-1) .back {
         background: linear-gradient(30deg, rgb(232, 107, 165), rgba(232, 107, 165, .6));
         color: rgb(43, 107, 55);
     }
-
     .card:nth-of-type(5n) .back {
         background: linear-gradient(30deg, rgb(97, 41, 138), rgba(97, 41, 138, .6));
         color: rgb(169, 107, 197);
     }
     </style>
 </head>
-
 <body>
     <h1>Word Cards</h1>
     <ul class="mycards"></ul>
@@ -109,5 +95,4 @@
     }
     </script>
 </body>
-
 </html>
