--- a/056.html
+++ b/056.html
@@ -1,7 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="author" content="liuxiyuan">
 	<title>Word cards</title>
 	<style>
 		body{
