--- a/056.html
+++ b/056.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="liuxiyuan">
+	<meta name="viewport" content="width=device-width">
 	<title>Word cards</title>
 	<style>
 		body{
