--- a/070.html
+++ b/070.html
@@ -40,7 +40,7 @@
 		<p><b>刘溪湲</b>同学</p>
 		<p class="text">鉴于你在本次编程学习中，态度积极、表现突出，特发此卡，以资鼓励。</p>
 		<p class="text">凭此卡任何时间无需任何理由免做作业一次。</p>
-		<p class="time">发卡时间： 年 月 日</p>
+		<p class="time">发卡时间：2019年9月8日</p>
 	</div>
 </body>
 </html>
