--- a/063.html
+++ b/063.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="author" content="liuxiyuan">
+	<meta name="viewport" content="width=device-width">
 	<title>大小</title>
 </head>
 <body>
