--- a/064.html
+++ b/064.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="liuxiyuan">
+    <meta name="viewport" content="width=device-width">
     <title>Anna's homepage</title>
     <style>
     body,
