--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 	<h1>Hello world</h1>
 	<p>I'm Anna</p>
 	<p>I'like rabbits</p>
+	<ul>
+		<li><a href="083.html" title="九九乘法表">九九乘法表</a></li>
+		<li><a href="095.html" title="poems">poems</a></li>
+	</ul>
 </body>
 </html>
