--- a/index.html
+++ b/index.html
@@ -3,24 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Anna</title>
+	<style>
+		ul{
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+		a{
+			text-decoration: none;
+			color: #00c;
+		}
+		a:hover{
+			color: #fd00ca;
+		}
+	</style>
 </head>
 <body>
 	<h1>Hello world</h1>
 	<p>I'm Anna</p>
 	<p>I'like rabbits</p>
 	<ul>
-		<li><a href="083.html" title="九九乘法表">九九乘法表</a></li>
-		<li><a href="053.html" title="爸爸妈妈我爱你们">爸爸妈妈我爱你们</a></li>
-		<li><a href="095.html" title="poems">poems</a></li>
-		<li><a href="055.html" title="sum">sum</a></li>
-		<li><a href="056.html" title="Word cards">Word cards</a></li>
-		<li><a href="059.html" title="鸡兔同笼">鸡兔同笼</a></li>
-		<li><a href="063.html" title="大小">大小</a></li>
-		<li><a href="064.html" title="Anna's homepage">Anna's homepage</a></li>
-		<li><a href="070.html" title="免做作业卡">免做作业卡</a></li>
-		<li><a href="072.html" title="Card">Card</a></li>
-		<li><a href="073.html" title="Word cards">Word cards</a></li>
-		<li><a href="084.html" title="画猫">画猫</a></li>
+		<li><a target="blank" href="083.html" title="九九乘法表">九九乘法表</a></li>
+		<li><a target="blank" href="053.html" title="爸爸妈妈我爱你们">爸爸妈妈我爱你们</a></li>
+		<li><a target="blank" href="095.html" title="poems">poems</a></li>
+		<li><a target="blank" href="055.html" title="sum">sum</a></li>
+		<li><a target="blank" href="056.html" title="Word cards">Word cards</a></li>
+		<li><a target="blank" href="059.html" title="鸡兔同笼">鸡兔同笼</a></li>
+		<li><a target="blank" href="063.html" title="大小">大小</a></li>
+		<li><a target="blank" href="064.html" title="Anna's homepage">Anna's homepage</a></li>
+		<li><a target="blank" href="070.html" title="免做作业卡">免做作业卡</a></li>
+		<li><a target="blank" href="072.html" title="Card">Card</a></li>
+		<li><a target="blank" href="073.html" title="Word cards">Word cards</a></li>
+		<li><a target="blank" href="084.html" title="画猫">画猫</a></li>
 	</ul>
 </body>
 </html>
