--- a/055.html
+++ b/055.html
@@ -32,8 +32,8 @@
 		let number2 = document.querySelector('#number2');
 		let button = document.querySelector('button');
 		button.addEventListener('click',sum);
-		number1.addEventListener('click',sum);
-		number2.addEventListener('click',sum);
+		number1.addEventListener('input',sum);
+		number2.addEventListener('input',sum);
 		function sum() {
 			button.textContent = parseInt(number1.value) + parseInt(number2.value);
 		}
