--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 			list-style: none;
 			margin: 0;
 			padding: 0;
+			display: flex;
+			flex-wrap: wrap;
 		}
 		a{
 			text-decoration: none;
 			color: #00c;
+			display: block;
 		}
 		a:hover{
 			color: #fd00ca;
+		}
+		li{
+			height: 200px;
+			width: 200px;
+			padding: 12px;
+			margin: 12px;
+			background: rgba(32,87,246,.3);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 10px;
 		}
 	</style>
 </head>
