--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Anna</title>
 	<style>
 		ul{
@@ -10,11 +11,13 @@
 			padding: 0;
 			display: flex;
 			flex-wrap: wrap;
+			justify-content: center;
 		}
 		a{
 			text-decoration: none;
 			color: #00c;
 			display: block;
+			height: 100%;
 		}
 		a:hover{
 			color: #fd00ca;
@@ -29,6 +32,7 @@
 			align-items: center;
 			justify-content: center;
 			border-radius: 10px;
+
 		}
 	</style>
 </head>
