--- a/096.html
+++ b/096.html
@@ -16,6 +16,12 @@
 			width: 600px;
 			margin: 150px auto 0;
 		}
+		.card p{
+			font-size: 24px;
+		}
+		.card h1{
+			font-size: 28px;
+		}
 		.front{
 			background:rgba(177,196,255,.5);
 			border-radius: 10px;
@@ -40,20 +46,18 @@
 <body>
 	<div class="card">
 		<div class="front">
-			<h1>
+				<h1>Coming to school</h1>
 				<p>How do you come to school?</p>
 				<p>I come to school on foot.</p>
 				<p>How do you come to school?</p>
 				<p>By metro.</p>
-			</h1>
 		</div>
 		<div class="back">
-			<h1>
+				<h1>怎么到学校</h1>
 				<p>你怎么到学校？</p>
 				<p>我走到学校。</p>
 				<p>你怎么到学校？</p>
 				<p>我坐地铁。</p>
-			</h1>
 		</div>
 	</div>
 	<script>
