--- a/index.html
+++ b/index.html
@@ -3,36 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
+	<meta name="author" content="liuxiyuan">
 	<title>Anna</title>
-	<style>
-		ul{
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-		}
-		li{
-			height: 200px;
-			width: 200px;
-			padding: 12px;
-			margin: 12px;
-			background: rgba(32,87,246,.3);
-			border-radius: 10px;
-		}
-		a{
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			height: 100%;
-			text-decoration: none;
-			color: #00c;
-		}
-		a:hover{
-			color: #fd00ca;
-		}
-	</style>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Hello world</h1>
@@ -51,6 +24,7 @@
 		<li><a target="blank" href="072.html" title="Card">Card</a></li>
 		<li><a target="blank" href="073.html" title="Word cards">Word cards</a></li>
 		<li><a target="blank" href="084.html" title="画猫">画猫</a></li>
+		<li><a target="blank" href="097.html" title="Coming to school">Coming to school</a></li>
 	</ul>
 </body>
 </html>
