--- a/index.html
+++ b/index.html
@@ -8,23 +8,63 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Hello world</h1>
-	<p>I'm Anna</p>
-	<p>I'like rabbits</p>
-	<ul>
-		<li><a target="blank" href="083.html" title="九九乘法表">九九乘法表</a></li>
-		<li><a target="blank" href="053.html" title="爸爸妈妈我爱你们">爸爸妈妈我爱你们</a></li>
-		<li><a target="blank" href="095.html" title="poems">poems</a></li>
-		<li><a target="blank" href="055.html" title="sum">sum</a></li>
-		<li><a target="blank" href="056.html" title="Word cards">Word cards</a></li>
-		<li><a target="blank" href="059.html" title="鸡兔同笼">鸡兔同笼</a></li>
-		<li><a target="blank" href="063.html" title="大小">大小</a></li>
-		<li><a target="blank" href="064.html" title="Anna's homepage">Anna's homepage</a></li>
-		<li><a target="blank" href="070.html" title="免做作业卡">免做作业卡</a></li>
-		<li><a target="blank" href="072.html" title="Card">Card</a></li>
-		<li><a target="blank" href="073.html" title="Word cards">Word cards</a></li>
-		<li><a target="blank" href="084.html" title="画猫">画猫</a></li>
-		<li><a target="blank" href="097.html" title="Coming to school">Coming to school</a></li>
-	</ul>
+	<header>
+		<h1 class="logo"><a href="index.html">ANNA</a></h1>
+		<nav>
+			<ul>
+				<li><a href="works.html">works</a></li>
+				<li><a href="coding.html">coding</a></li>
+				<li><a href="about.html">about</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<h2><a href="works.html">MY WORKS</a></h2>
+		<ul class="works">
+			<li class="item">
+				<a href="images/zp1.jpg">
+					<img src="images/zp1.jpg" alt="小亭子">
+					<h3>小亭子</h3>
+				</a>
+			</li>
+			<li class="item">
+				<a href="images/zp2.jpg">
+					<img src="images/zp2.jpg" alt="桌子上的鱼缸">
+					<h3>桌子上的鱼缸</h3>
+				</a>
+			</li>
+			<li class="item">
+				<a href="images/zp3.jpg">
+					<img src="images/zp3.jpg" alt="彩虹灯塔">
+					<h3>彩虹灯塔</h3>
+				</a>
+			</li>
+			<li class="item">
+				<a href="images/zp4.jpg">
+					<img src="images/zp4.jpg" alt="白桦林">
+					<h3>白桦林</h3>
+				</a>
+			</li>
+		</ul>
+		<h2>MY CODING</h2>
+		<ul class="coding">
+			<li><a target="blank" href="083.html" title="九九乘法表">九九乘法表</a></li>
+			<li><a target="blank" href="053.html" title="爸爸妈妈我爱你们">爸爸妈妈我爱你们</a></li>
+			<li><a target="blank" href="095.html" title="poems">poems</a></li>
+			<li><a target="blank" href="055.html" title="sum">sum</a></li>
+			<li><a target="blank" href="056.html" title="Word cards">Word cards</a></li>
+			<li><a target="blank" href="059.html" title="鸡兔同笼">鸡兔同笼</a></li>
+			<li><a target="blank" href="063.html" title="大小">大小</a></li>
+			<li><a target="blank" href="064.html" title="Anna's homepage">Anna's homepage</a></li>
+			<li><a target="blank" href="070.html" title="免做作业卡">免做作业卡</a></li>
+			<li><a target="blank" href="072.html" title="Card">Card</a></li>
+			<li><a target="blank" href="073.html" title="Word cards">Word cards</a></li>
+			<li><a target="blank" href="084.html" title="画猫">画猫</a></li>
+			<li><a target="blank" href="097.html" title="Coming to school">Coming to school</a></li>
+		</ul>
+	</main>
+	<footer>
+		<p>created by <a target="_blank" href="https://github.com/lxiyuan">liuxiyuan</a></p>
+	</footer>
 </body>
 </html>
