--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 		<p class="info">age:7 height:132cm weight:26kg </p>
 		<div class="about">
 			<p>Hello! My name is Anna.</p>
-			<p>I am senven year ord.</p>
+			<p>I am senven years old.</p>
 			<p>I like read books.</p>
-			<p>I live in Xi`an.</p>
+			<p>I live in Xi'an.</p>
 			<p>I come to school by bicycle.</p>
 		</div>
 	</main>
