--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 		<div class="about">
 			<p>Hello! My name is Anna.</p>
 			<p>I am senven years old.</p>
-			<p>I like read books.</p>
+			<p>I like reading books and dancing.</p>
 			<p>I live in Xi'an.</p>
 			<p>I come to school by bicycle.</p>
 		</div>
