--- a/works.html
+++ b/works.html
@@ -18,48 +18,48 @@
 	</header>
 	<main>
 		<h2><a href="works.html">MY WORKS</a></h2>
-		<ul class="works ant">
+		<ul class="works wlist">
 			<li class="item">
-				<a href="images/zp1.jpg">
+				<a target="blank" href="images/zp1.jpg">
 					<img src="images/zp1.jpg" alt="小亭子">
 					<h3>小亭子</h3>
 				</a>
 			</li>
 			<li class="item">
-				<a href="images/zp2.jpg">
+				<a target="blank" href="images/zp2.jpg">
 					<img src="images/zp2.jpg" alt="桌子上的鱼缸">
 					<h3>桌子上的鱼缸</h3>
 				</a>
 			</li>
 			<li class="item">
-				<a href="images/zp3.jpg">
+				<a target="blank" href="images/zp3.jpg">
 					<img src="images/zp3.jpg" alt="彩虹灯塔">
 					<h3>彩虹灯塔</h3>
 				</a>
 			</li>
 			<li class="item">
-				<a href="images/zp4.jpg">
+				<a target="blank" href="images/zp4.jpg">
 					<img src="images/zp4.jpg" alt="白桦林">
 					<h3>白桦林</h3>
 				</a>
 			</li>
 			<li class="item">
-				<a href="images/zp5.jpg">
+				<a target="blank" href="images/zp5.jpg">
 					<img src="images/zp5.jpg" alt="冰激凌">
 					<h3>冰激凌</h3>
 				</a></li>
 			<li class="item">
-				<a href="images/zp7.jpg">
+				<a target="blank" href="images/zp7.jpg">
 					<img src="images/zp7.jpg" alt="女娲补天">
 					<h3>女娲补天</h3>
 				</a></li>
 			<li class="item">
-				<a href="images/zp8.jpg">
+				<a target="blank" href="images/zp8.jpg">
 					<img src="images/zp8.jpg" alt="不倒翁">
 					<h3>不倒翁</h3>
 				</a></li>
 			<li class="item">
-				<a href="images/zp6.jpg">
+				<a target="blank" href="images/zp6.jpg">
 					<img src="images/zp6.jpg" alt="睡梦">
 					<h3>睡梦</h3>
 				</a></li>
