--- a/works.html
+++ b/works.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
+	<meta name="author" content="liuxiyuan">
 	<title>My works</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
